[gd_scene load_steps=13 format=3 uid="uid://ln88vbvxsas4"]

[ext_resource type="Texture2D" uid="uid://cnm0sw6ir0dyf" path="res://Game Folder/game_assets/Player/Primary/Sprites/bullet.png" id="1_4ym67"]
[ext_resource type="Script" path="res://Game Folder/game_components/collision_component/Databox/databox.gd" id="2_ncdc7"]
[ext_resource type="PackedScene" uid="uid://dlq8my4bamdlh" path="res://Game Folder/game_assets/Player/VFX/More Hit Particles.tscn" id="3_tpoy3"]
[ext_resource type="AudioStream" uid="uid://brao2bap7hjx" path="res://Game Folder/game_assets/Player/Primary/Audio/sp_hit.ogg" id="4_jgb20"]

[sub_resource type="GDScript" id="GDScript_4ywsl"]
resource_name = "testbullet"
script/source = "extends Projectile
@onready var player_primary = global.player.primary
@onready var sprite: Sprite2D = $Sprite
@onready var spawn_anim: AnimationPlayer = $Spawn_anim
@onready var timer: Timer = $Timer
@onready var camera = global.camera as juicycamera_component
@onready var hit_particles: GPUParticles2D = $hit_particles
@onready var hit_particles_2: CPUParticles2D = $hit_particles2
@onready var sfx_hit: AudioStreamPlayer = $sfx_hit


func _ready() -> void:
	super()
	hit_particles.reparent(global)

#region Interactions
func eteam_hurtbox_entered(area: Databox) -> void:
	area.take_damage(hitbox)
	effects()
	queue_free()

func nteam_hurtbox_entered(area: Databox) -> void:
	area.take_damage(hitbox)
	effects()
	queue_free()
#endregion

func _physics_process(delta: float) -> void:
	simple_move(delta)
	sprite.rotate(15 * delta)

func effects():
	sfx_hit.reparent(global)
	sfx_hit.play()
	VFX()

func VFX():
	camera.shake(10.0)
	camera.freezeframe(0.1, 0.08)
	hit_particles.global_position = self.global_position
	hit_particles.emitting = true
	hit_particles_2.global_position = self.global_position
"

[sub_resource type="CircleShape2D" id="CircleShape2D_c4qqr"]
radius = 5.0

[sub_resource type="Animation" id="Animation_se65j"]
resource_name = "spawn-anim"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.3, 1.3), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ysol4"]
_data = {
"spawn-anim": SubResource("Animation_se65j")
}

[sub_resource type="Curve" id="Curve_7c1eh"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.77957, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_j6vgf"]
curve = SubResource("Curve_7c1eh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5b6j6"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(1, 44, 1)
emission_shape = 1
emission_sphere_radius = 1.0
angle_min = 720.0
angle_max = 720.0
spread = 180.0
initial_velocity_min = 1000.0
initial_velocity_max = 1000.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = 720.0
orbit_velocity_min = 2.0
orbit_velocity_max = 2.0
radial_velocity_min = -162.16
radial_velocity_max = 54.06
gravity = Vector3(0, 0, 0)
linear_accel_min = 100.0
linear_accel_max = 100.0
color = Color(0, 1, 1, 1)
alpha_curve = SubResource("CurveTexture_j6vgf")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_o5l0r"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("4_jgb20")

[node name="test_ubullet" type="CharacterBody2D" node_paths=PackedStringArray("hitbox")]
scale = Vector2(1e-05, 1e-05)
motion_mode = 1
script = SubResource("GDScript_4ywsl")
speed = -35000
hitbox = NodePath("Hitbox")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_4ym67")

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("2_ncdc7")
parent = NodePath("..")
team_affiliation = "PlayerTeam"
damage = 33.3
knockback_amount = 8400.0
knockback_stun_duration = 0.3

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_c4qqr")

[node name="Spawn_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ysol4")
}
autoplay = "spawn-anim"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="hit_particles" type="GPUParticles2D" parent="."]
emitting = false
amount = 150
process_material = SubResource("ParticleProcessMaterial_5b6j6")
lifetime = 0.5
one_shot = true
speed_scale = 44.0
explosiveness = 1.0
randomness = 1.0
fixed_fps = 60

[node name="hit_particles2" parent="." instance=ExtResource("3_tpoy3")]

[node name="sfx_hit" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_o5l0r")
volume_db = -12.0
max_polyphony = 3
bus = &"SFX"
playback_type = 2

[connection signal="EnemyTeamHurtbox_entered" from="Hitbox" to="." method="eteam_hurtbox_entered"]
[connection signal="NeutralTeamHurtbox_entered" from="Hitbox" to="." method="nteam_hurtbox_entered"]
[connection signal="timeout" from="Timer" to="." method="timer_timeout"]
